--- a/Axiom/Axiom.csproj
+++ b/Axiom/Axiom.csproj
@@ -35,16 +35,15 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine.cs" />
+    <Compile Include="Error.cs" />
     <Compile Include="Internal\Lexer.cs" />
     <Compile Include="Internal\Parser.cs" />
-    <Compile Include="Internal\Position.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Internal\Symbol.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
