Create lexer unit test

--- a/Axiom/Axiom.csproj
+++ b/Axiom/Axiom.csproj
@@ -32,14 +32,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Engine.cs" />
+    <Compile Include="Compiler.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="Internal\Lexer.cs" />
     <Compile Include="Internal\Parser.cs" />
