--- a/Axiom/Axiom.csproj
+++ b/Axiom/Axiom.csproj
@@ -38,13 +38,33 @@
   <ItemGroup>
     <Compile Include="Compiler.cs" />
     <Compile Include="Error.cs" />
+    <Compile Include="Internal\Ast\AssignmentExpression.cs" />
+    <Compile Include="Internal\Ast\AstNode.cs" />
+    <Compile Include="Internal\Ast\BinaryExpression.cs" />
+    <Compile Include="Internal\Ast\CompoundStatement.cs" />
+    <Compile Include="Internal\Ast\ConditionalExpression.cs" />
+    <Compile Include="Internal\Ast\Expression.cs" />
+    <Compile Include="Internal\Ast\ExpressionStatement.cs" />
+    <Compile Include="Internal\Ast\Identifier.cs" />
+    <Compile Include="Internal\Ast\Literal.cs" />
+    <Compile Include="Internal\Ast\MemberExpression.cs" />
+    <Compile Include="Internal\Ast\Program.cs" />
+    <Compile Include="Internal\Ast\ReferenceExpression.cs" />
+    <Compile Include="Internal\Ast\SequenceExpression.cs" />
+    <Compile Include="Internal\Ast\Statement.cs" />
+    <Compile Include="Internal\Ast\UnaryExpression.cs" />
+    <Compile Include="Internal\ILexer.cs" />
+    <Compile Include="Internal\IParser.cs" />
+    <Compile Include="Internal\IVisitor.cs" />
     <Compile Include="Internal\Lexer.cs" />
     <Compile Include="Internal\Parser.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Internal\Symbol.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\Token.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Internal\Intermediate\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
