--- a/Axiom/Axiom.csproj
+++ b/Axiom/Axiom.csproj
@@ -42,11 +42,13 @@
     <Compile Include="Internal\Ast\AssignmentExpression.cs" />
     <Compile Include="Internal\Ast\AstNode.cs" />
     <Compile Include="Internal\Ast\BinaryExpression.cs" />
-    <Compile Include="Internal\Ast\CompoundStatement.cs" />
+    <Compile Include="Internal\Ast\BlockStatement.cs" />
+    <Compile Include="Internal\Ast\CallExpression.cs" />
     <Compile Include="Internal\Ast\ConditionalExpression.cs" />
     <Compile Include="Internal\Ast\Expression.cs" />
     <Compile Include="Internal\Ast\ExpressionStatement.cs" />
     <Compile Include="Internal\Ast\ForStatement.cs" />
+    <Compile Include="Internal\Ast\FunctionExpression.cs" />
     <Compile Include="Internal\Ast\Identifier.cs" />
     <Compile Include="Internal\Ast\IfStatement.cs" />
     <Compile Include="Internal\Ast\Literal.cs" />
@@ -57,10 +59,31 @@
     <Compile Include="Internal\Ast\Statement.cs" />
     <Compile Include="Internal\Ast\UnaryExpression.cs" />
     <Compile Include="Internal\Ast\WhileStatement.cs" />
+    <Compile Include="Internal\Extensions.cs" />
+    <Compile Include="Internal\Frames\Frame.cs" />
+    <Compile Include="Internal\Frames\FrameDescription.cs" />
+    <Compile Include="Internal\Frames\FrameEvaluator.cs" />
+    <Compile Include="Internal\Frames\Label.cs" />
+    <Compile Include="Internal\Frames\Access.cs" />
+    <Compile Include="Internal\Frames\Temp.cs" />
     <Compile Include="Internal\ILexer.cs" />
+    <Compile Include="Internal\Intermediate\ImBinaryOperation.cs" />
+    <Compile Include="Internal\Intermediate\ImChunk.cs" />
+    <Compile Include="Internal\Intermediate\ImCode.cs" />
+    <Compile Include="Internal\Intermediate\ImCodeGenerator.cs" />
+    <Compile Include="Internal\Intermediate\ImConstant.cs" />
+    <Compile Include="Internal\Intermediate\ImExpression.cs" />
+    <Compile Include="Internal\Intermediate\ImExpressionSequence.cs" />
+    <Compile Include="Internal\Intermediate\ImExpressionStatement.cs" />
+    <Compile Include="Internal\Intermediate\ImLabel.cs" />
+    <Compile Include="Internal\Intermediate\ImSequence.cs" />
+    <Compile Include="Internal\Intermediate\ImStatement.cs" />
+    <Compile Include="Internal\Intermediate\ImTemp.cs" />
+    <Compile Include="Internal\Intermediate\Interpreter.cs" />
     <Compile Include="Internal\IParser.cs" />
     <Compile Include="Internal\IVisitor.cs" />
     <Compile Include="Internal\Lexer.cs" />
+    <Compile Include="Internal\Report.cs" />
     <Compile Include="Internal\Semantics\IllegalDeleteException.cs" />
     <Compile Include="Internal\Semantics\IllegalInsertException.cs" />
     <Compile Include="Internal\Semantics\NameChecker.cs" />
