--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -77,6 +77,10 @@
     <Content Include="Data\Symbols.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\Variables.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Axiom\Axiom.csproj">
